@@ -1924,6 +1924,10 @@ class User {
 			return;
 		}
 
+		if ( !$userblock->mEnableAutoblock ) {
+			return;
+		}
+
 		# Check if this IP address is already blocked
 		$ipblock = Block::newFromDB( wfGetIP() );
 		if ( $ipblock ) {
